--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: loginsystem
+name: sappyapp
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -37,6 +37,10 @@ dependencies:
   firebase_core: ^1.11.0
   firebase_auth: ^3.3.5
   fluttertoast: ^8.0.8
+  http: ^0.13.4
+  dialogflow_flutter: ^1.0.0
+  dialog_flowtter: ^0.3.3
+  health: ^3.4.4
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +65,8 @@ flutter:
 
   assets:
     - assets/image/
+    - assets/dialog_flow_auth.json
+    - assets/credentials/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
