--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   dialogflow_flutter: ^1.0.0
   dialog_flowtter: ^0.3.3
   health: ^3.4.4
+  firebase_storage: ^10.2.16
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
