--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   health: ^3.4.4
   firebase_storage: ^10.2.16
   image_picker: ^0.8.5+3
+  cloud_firestore: ^3.1.16
 
 dev_dependencies:
   flutter_test:
